@@ -712,7 +712,11 @@ finish_prepare_screenshot (char *initial_uri, GdkWindow *window)
 {  
   ScreenshotDialog *dialog;
 
-  screenshot = screenshot_get_pixbuf (window, include_pointer, include_border);
+  /* always disable window border for full-desktop screenshots */
+  if (!take_window_shot)
+    screenshot = screenshot_get_pixbuf (window, include_pointer, FALSE);
+  else
+    screenshot = screenshot_get_pixbuf (window, include_pointer, include_border);
 
   if (take_window_shot) {
     switch (border_effect[0])
