@@ -369,7 +369,7 @@ out:
 void
 screenshot_xfer_uri (GFile *source_file,
                      GFile *target_file,
-		     GtkWidget *parent,
+                     GtkWidget *parent,
                      TransferCallback done_callback,
                      gpointer done_callback_data)
 {
