@@ -1,3 +1,9 @@
+2008-11-08  Cosimo Cecchi  <cosimoc@gnome.org>
+
+	* gnome-screenshot.c: (finish_prepare_screenshot):
+	Don't try to include the window border when doing fullscreen
+	captures (#559532).
+
 2008-11-04  Cosimo Cecchi  <cosimoc@gnome.org>
 
 	* Makefile.am: update to the new configure pkg-config checks
